# agent-jetson

./: .gitignore
drivers/dynamixel_sdk_examples/src/: read_write_node.cpp
perception/darknet_ros/darknet/src/: image.c  image.h
perception/darknet_ros/darknet_ros/config/: 2020yolov3-tiny.yaml  2022yolov3-tiny_object.yaml  myyolov3-tiny.yaml  yolov3-tiny-bricks.yaml
perception/darknet_ros/darknet_ros/include/darknet_ros/: YoloObjectDetector.hpp
perception/darknet_ros/darknet_ros/launch/: 2020yolov3-tiny.launch  2022yolov3_tiny_object.launch  darknet_ros.launch  yolov3_bricks.launch
perception/darknet_ros/darknet_ros/src/: YoloObjectDetector.cpp
perception/darknet_ros/darknet_ros/yolo_network_config/: ghost.data  ghost.names
perception/darknet_ros/darknet_ros/yolo_network_config/cfg/: yolov3-tiny-bricks.cfg
perception/ros_opencv_ipcam_qr/: CMakeLists.txt  package.xml
perception/ros_opencv_ipcam_qr/msg/: hero_ipcam_qr_msg.msg
perception/ros_opencv_ipcam_qr/src/: ros_opencv_ipcam_qr.cpp
perception/ros_opencv_manipulation/: CMakeLists.txt  package.xml
perception/ros_opencv_manipulation/launch/: example.launch
perception/ros_opencv_manipulation/src/: ros_opencv_manipulation.cpp
perception/ros_opencv_qr_calibration/: CMakeLists.txt  package.xml
perception/ros_opencv_qr_calibration/src/: ros_opencv_qr_calibration.cpp
perception/ros_opencv_save/: CMakeLists.txt  package.xml
perception/ros_opencv_save/src/: ros_opencv_save.cpp
robot/albc_control/: CMakeLists.txt  package.xml
robot/albc_control/cfg/: ALBCController.cfg
robot/albc_control/config/: albc_controller.yaml
robot/albc_control/include/albc_control/: albc_kinematics.h
robot/albc_control/launch/: albc.launch
robot/albc_control/scripts/: launch_albc.sh
robot/albc_control/src/: albc_controller.cpp  joint_angle_command.cpp
robot/hero_agent/: CMakeLists.txt  package.xml
robot/hero_agent/config/: agent_command.yaml  agent_dvl.yaml
robot/hero_agent/include/hero_agent/: agent_command_types.h  hero_agent_types.h
robot/hero_agent/launch/: agent_launch.launch
robot/hero_agent/scripts/: key_teleop.py
robot/hero_agent/src/: agent_command.cpp  agent_dvl.cpp  agent_main.cpp  agent_main_fsm_backup.cpp  darknet_control.cpp  keyboard_handler.cpp  keyboard_utils.cpp  lawnmower_survey.cpp  mosaic_survey.cpp  qr_recovery_control.cpp  teleop.cpp
robot/hero_msgs/: CMakeLists.txt  README.md
robot/hero_msgs/msg/: hero_agent_cont_para.msg  hero_agent_cont_xy.msg  hero_agent_dvl.msg  hero_agent_dvl_velocity.msg  hero_agent_position_result.msg
