<?xml version="1.0"?>
<package format="2">
  <name>albc_control</name>
  <version>3.7.51</version>
  <description>ALBC (Active Link Buoyancy Control) controller package</description>

  <maintainer email="nvidia@todo.todo">nvidia</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>hero_msgs</depend>
  <depend>dynamixel_sdk</depend>
  <depend>dynamic_reconfigure</depend>

</package>
