<?xml version="1.0"?>
<package format="2">
  <name>hero_agent</name>
  <version>1.0.0</version>
  <description>HERO underwater robot agent: visual servoing and teleop</description>

  <maintainer email="nvidia@todo.todo">nvidia</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>hero_msgs</depend>
  <exec_depend>xterm</exec_depend>

  <export></export>
</package>
